[Mobile][BUG]-Fixed: unwanted grey color gap on the Oppia home page removed using flex container

--- a/core/templates/pages/splash-page/splash-page.component.css
+++ b/core/templates/pages/splash-page/splash-page.component.css
@@ -255,6 +255,8 @@
 }
 
 .splash-page .oppia-splash-section-six-right {
+  display: flex;
+  flex-direction: column;
   margin-bottom: auto;
   margin-left: auto;
   margin-top: auto;
@@ -309,6 +311,7 @@
 .splash-page .oppia-splash-section-seven-left p {
   font-family: "Roboto", Arial, sans-serif;
   line-height: 1.5;
+  margin: 0;
   padding-right: 10vw;
 }
 
